tests/samples/negative/types/tuple_field_out_of_range.ax
module tuple_field_out_of_range;

fn main() -> i32 {
    let pair = (1, false);
    return pair.2;
}
